# linux_school_stuff

./: README
01/: Makefile  README  file.c
02/: Makefile  README  coding_style  hello1.c  hello2.c  prog.c
03/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
03/src/: Makefile.am  Makefile.in  debug_msgs.h  prog.c  prog.h
03/tests/: Makefile.am  Makefile.in  check_prog.c
04/: Makefile  README  class.c  my_id.c
05/: Makefile  README  daemon.c  named_pipe.c  unnamed_pipe.c
06/: Makefile  README  class.c  main.c
07/: Doxyfile  Makefile  README  round_buf.c  round_buf.h  soubeh.c
08/: Makefile  README  main_client.c  main_server.c  prog.c  server.c  server.h
09/: Makefile  README  map.c  shmem.c
10/: Makefile  README  prog.c  prog2.c
11/: Makefile  README  cs.po  prog.c  prog.mo  prog.po
